<resources>
    <string name="app_name">Songs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="collection_name">Collection Name</string>
    <string name="type">Type</string>
    <string name="song_price">Song Price</string>
    <string name="collection_price">Collection Price</string>
    <string name="release_date">Release Date</string>

    <string name="title_activity_web">WebActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
